--- a/www/management.html
+++ b/www/management.html
@@ -10,10 +10,12 @@
 <h2>
 Select command:
 <ul>
- <li><a href="alarm_on.cgi">Alarm on</a></li>
- <li><a href="alarm_off.cgi">Alarm off</a></li>
+ <li><a href="alarm_on.cgi">Set alarm on</a></li>
+ <li><a href="alarm_off.cgi">Set alarm off</a></li>
  <br>
- <li><a href="halt.cgi">halt</a></li>
+ <li><a href="reboot.cgi">Reboot</a></li>
+ <br>
+ <li><a href="halt.cgi">Halt</a></li>
 </ul>
 </h2>
 
