--- a/www/index.html
+++ b/www/index.html
@@ -15,12 +15,13 @@ Select view mode:
  <li><a href="javascript_simple.html">Javascript</a></li>
 </ul>
 </h2>
-<h2>For VLC Video LAN: <pre id="stream">http://&lt;IP&gt;:&lt;port&gt;/?action=stream</pre></h2>
+<h3>For VLC Video LAN: <pre>http://&lt;IP&gt;:&lt;port&gt;/?action=stream</pre></h3>
 
 <h2>
 Select command:
 <ul>
  <li><a href="ps.cgi">List processess</a></li>
+ <li><a href="capture_list.cgi">List of photos</a></li>
  <li><a href="gpio.html">GPIO control</a></li>
  <li><a href="alarm_state.cgi">Check alarm state</a></li>
  <li><a href="management.html">System management</a></li>
