Opening of log files fixed. Max length of log files reduced. Added web option to show log file. UPNP library functions commented

--- a/www/index.html
+++ b/www/index.html
@@ -24,12 +24,13 @@ Select command:
  <li><a href="capture_list.cgi">List of photos</a></li>
  <li><a href="gpio.html">GPIO control</a></li>
  <li><a href="alarm_state.cgi">Check alarm state</a></li>
+ <li><a href="daemon_log.cgi">Show daemon log</a></li>
  <li><a href="management.html">System management</a></li>
 </ul>
 </h2>
 <!--
 <img src="./?action=snapshot" alt="static img."/>
 --->
-<p>Server based on MJPEG streamer</p>
+<p>Server based on MJPG-streamer</p>
 </body>
 </html>
