--- a/www/management.html
+++ b/www/management.html
@@ -13,6 +13,8 @@ Select command:
  <li><a href="alarm_on.cgi">Set alarm on</a></li>
  <li><a href="alarm_off.cgi">Set alarm off</a></li>
  <br>
+ <li><a href="capture_erase.cgi">Erase photos</a></li>
+ <br>
  <li><a href="reboot.cgi">Reboot</a></li>
  <br>
  <li><a href="halt.cgi">Halt</a></li>
