Adding web option to show tunneling log, flushing log file for each print and other minor changes

--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,7 @@ Select command:
  <li><a href="gpio.html">GPIO control</a></li>
  <li><a href="alarm_state.cgi">Check alarm state</a></li>
  <li><a href="daemon_log.cgi">Show daemon log</a></li>
+ <li><a href="tunneling_log.cgi">Show tunneling log</a></li>
  <li><a href="management.html">System management</a></li>
 </ul>
 </h2>
